--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
+                        "baseHref": "/secretArchiveDist/",
                         "outputPath": "dist/archive-ski-app",
                         "index": "src/index.html",
                         "main": "src/main.ts",
@@ -22,7 +23,8 @@
                         "tsConfig": "tsconfig.app.json",
                         "assets": [
                             "src/favicon.ico",
-                            "src/assets"
+                            "src/assets",
+                            "src/404.html"
                         ],
                         "styles": [
                             "src/styles.css"
